--- a/packages/react/src/List/List.module.css
+++ b/packages/react/src/List/List.module.css
@@ -4,44 +4,32 @@
   margin: 0;
   list-style: none;
   gap: 8px;
-}
-
-ul.List {
   padding-inline-start: 0px;
-}
-
-ol.List {
-  counter-reset: li;
-  padding-inline-start: 0px;
-}
-
-.List > li {
   font-family: var(--brand-body-fontFamily);
   font-weight: var(--brand-text-weight-400);
-  font-size: var(--brand-text-size-300);
+  font-size: var(--brand-text-size-200);
   line-height: var(--brand-text-lineHeight-400);
   color: var(--brand-color-text-default);
 }
 
-ul.List > li::before {
-  padding-right: 12px;
+ol.List {
+  counter-reset: li;
 }
 
-ul.List--default > li::before {
-  content: '-';
+.ListItem {
+  display: flex;
+  gap: 12px;
+  align-items: center;
 }
 
-ul.List--checked > li::before {
-  content: '✔️';
+.StartingContent {
+  fill: var(--brand-color-text-muted);
 }
 
 ol.List > li::before {
   content: counter(li) '.';
   counter-increment: li;
-  padding-right: 12px;
-  font-family: var(--brand-body-fontFamily);
-  font-weight: var(--brand-text-weight-400);
-  font-size: var(--brand-text-size-300);
-  line-height: var(--brand-text-lineHeight-400);
+  min-width: 16px;
+  text-align: center;
   color: var(--brand-color-text-muted);
 }
