Updated OrderedList__item instead of nested ol selector

--- a/packages/react/src/List/ListItem/ListItem.module.css
+++ b/packages/react/src/List/ListItem/ListItem.module.css
@@ -8,7 +8,7 @@
   fill: var(--brand-color-text-muted);
 }
 
-ol > .ListItem::before {
+.OrderedList__item::before {
   content: counter(li) '.';
   counter-increment: li;
   min-width: var(--base-size-16);
