--- a/packages/react/src/list/ListItem/ListItem.module.css
+++ b/packages/react/src/list/ListItem/ListItem.module.css
@@ -1,11 +1,12 @@
 .ListItem {
   display: flex;
+  align-items: flex-start;
   gap: var(--base-size-12);
-  align-items: center;
 }
 
 .ListItem__leading-visual {
   fill: var(--brand-color-text-muted);
+  margin: var(--base-size-4) 0;
 }
 
 .OrderedList__item::before {
