fix visually-hidden class to be global

--- a/packages/react/src/css/utilities.css
+++ b/packages/react/src/css/utilities.css
@@ -3,7 +3,7 @@
  * frequently throughout the library and helpful to library users.
  */
 
-.visually-hidden {
+:global(.visually-hidden) {
   position: absolute;
   width: 1px;
   height: 1px;
