Adjust props and markup to require link and linkHref

--- a/packages/react/src/Card/Card.module.css
+++ b/packages/react/src/Card/Card.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   overflow: hidden;
   background-color: var(--brand-Card-background-default);
+  text-decoration: none;
 }
 
 .Card__size--small {
