Replace Button with Link in SectionIntro

--- a/packages/react/src/SectionIntro/SectionIntro.module.css
+++ b/packages/react/src/SectionIntro/SectionIntro.module.css
@@ -24,6 +24,6 @@
   max-width: 50ch;
 }
 
-.SectionIntro-action {
-  margin-top: var(--base-size-8);
+.SectionIntro-link {
+  margin-top: var(--base-size-16);
 }
