--- a/packages/react/src/MinimalFooter/MinimalFooter.module.css
+++ b/packages/react/src/MinimalFooter/MinimalFooter.module.css
@@ -1,5 +1,5 @@
 .Footer {
-  background-color: var(--base-color-scale-gray-9);
+  background-color: var(--brand-footer-bg-color);
 }
 
 /**
@@ -30,7 +30,7 @@
   margin-right: var(--base-size-4);
 }
 
-.Footer__terms-item:last-of-type {
+.Footer__terms-item:last-child {
   margin-bottom: 0;
 }
 
@@ -58,15 +58,9 @@
   padding-bottom: var(--base-size-48);
 }
 
-.Footer__social-label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  word-wrap: normal;
-  border: 0;
+.Footer__social-icon {
+  width: 24px;
+  height: auto;
 }
 
 /**
