--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -122,6 +122,7 @@
     outline-offset: 2px;
   }
 
+  /* Indicates disabled state in WHCM */
   .Button--label.Button-label--disabled {
     color: GrayText;
   }
