Updated Styles and Docs - Styles change button to be auto sized - Docs include the new structure for the component

--- a/packages/react/src/CTAForm/CTAForm.module.css
+++ b/packages/react/src/CTAForm/CTAForm.module.css
@@ -1,7 +1,7 @@
 .CTAForm {
   display: grid;
   gap: var(--base-size-16);
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr auto;
   align-items: flex-end;
 }
 
