Add fixes based on PR review
* Updates changeset to describe component.
* Removes `href` from props passed in feature stories if element is type "button".
* Replaces `px` value with token.
* Swaps out `ariaDisabled` prop for `aria-disabled` attribute.
* Adds test for `Button`.
* Adds example story for `aria-disabled`.
* Minor code clean up.

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -117,7 +117,7 @@
 @media (forced-colors: active) {
   /* Retains focus indicator when in "Windows High Contrast Mode". */
   .Button:focus:not(.Button--disabled[disabled]) {
-    outline: 3px solid;
+    outline: var(--brand-borderWidth-thick) solid;
     outline-color: var(--brand-color-focus);
     outline-offset: 2px;
   }
