Brand - Button accessibility updates (#170)
* Adds accessibility fixes

- Retains outline on focus when only `aria-disabled` is applied.
- Adds focus indicator when in WHCM.
- Adds 'disabled' button style for WHCM (for aria-disabled).
- Allows separate use of `disabled` and `aria-disabled`.
- Hides SVG from screen readers.

* Add changeset

* Fixes tests

* Runs prettier.
* Replaces `disabled` link stories with `button` to fix Axe warning.

* Add fixes based on PR review

* Updates changeset to describe component.
* Removes `href` from props passed in feature stories if element is type "button".
* Replaces `px` value with token.
* Swaps out `ariaDisabled` prop for `aria-disabled` attribute.
* Adds test for `Button`.
* Adds example story for `aria-disabled`.
* Minor code clean up.

* Fix lint issues

* Remove unused type

--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -13,7 +13,7 @@
   background: none;
 }
 
-.Button:focus:not(.Button--disabled) {
+.Button:focus:not(.Button--disabled[disabled]) {
   outline: none;
   box-shadow: 0 0 0 2px var(--brand-color-canvas-default), 0 0 0 5px var(--brand-color-focus);
 }
@@ -112,4 +112,18 @@
 
 .Button--disabled:not(.Button--secondary) {
   box-shadow: none;
+}
+
+@media (forced-colors: active) {
+  /* Retains focus indicator when in "Windows High Contrast Mode". */
+  .Button:focus:not(.Button--disabled[disabled]) {
+    outline: var(--brand-borderWidth-thick) solid;
+    outline-color: var(--brand-color-focus);
+    outline-offset: 2px;
+  }
+
+  /* Indicates disabled state in WHCM */
+  .Button--label.Button-label--disabled {
+    color: GrayText;
+  }
 }
