--- a/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -40,7 +40,7 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-inner-container {
     padding: 4px 32px;
   }
@@ -143,7 +143,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-primary-nav-list {
     display: flex;
     align-items: center;
@@ -187,7 +187,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-primary-nav-list-item--visible {
     order: 0;
     visibility: visible;
@@ -225,7 +225,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-link {
     font-family: var(--brand-heading-fontFamily);
     font-weight: var(--base-text-weight-semibold);
@@ -291,7 +291,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-more-link {
     cursor: pointer;
     appearance: none;
@@ -403,7 +403,7 @@
   transform: rotate(45deg) translateY(3px);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-search-button:hover,
   .SubdomainNavBar-menu-button:hover {
     border: var(--brand-borderWidth-thick) solid var(--brand-SubdomainNavBar-border-button-hover);
@@ -440,7 +440,7 @@
   gap: 16px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 48rem) {
   .SubdomainNavBar-button-area {
     display: none;
   }
@@ -477,7 +477,7 @@
   white-space: nowrap;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 48rem) and (max-width: 1023px) {
   .SubdomainNavBar-cta-button--secondary {
     display: none;
   }
@@ -517,7 +517,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-search-dialog {
     position: absolute;
     top: 0;
@@ -545,7 +545,7 @@
   gap: var(--base-size-4);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .SubdomainNavBar-search-dialog-control-area {
     max-width: 570px;
     margin: 0 auto;
